fix: zindx emblem, close button tablet, focus

--- a/src/modules/menu/components/mainMenu/mainMenu.css
+++ b/src/modules/menu/components/mainMenu/mainMenu.css
@@ -84,7 +84,7 @@
    top: 8.5em;
 }
 .is-tablet .main-menu__close-button {              
-   top: 8.5em;
+   top: 5em;
    }
 
 /*portrait */
